src/App.global.css
/*
 * @NOTE: Prepend a `~` to css file paths that are in your node_modules
 *        See https://github.com/webpack-contrib/sass-loader#imports
 */
body {
  position: relative;
  color: white;
  height: 100vh;
  background: linear-gradient(
    200.96deg,
    #fedc2a -29.09%,
    #dd5789 51.77%,
    #7a2c9e 129.35%
  );
  font-family: sans-serif;
  overflow-y: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

button {
  background-color: white;
  padding: 10px 20px;
  border-radius: 10px;
  border: none;
  appearance: none;
  font-size: 1.3rem;
  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
  transition: transform ease-in 0.1s;
  cursor: pointer;
}

button:hover {
  transform: scale(1.05);
}

li {
  list-style: none;
}

a {
  text-decoration: none;
  height: fit-content;
  width: fit-content;
  margin: 10px;
}

a:hover {
  opacity: 1;
  text-decoration: none;
}

.Header-Button {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 20px 0;
}

.Header {
  display: flex;
  flex-direction: row;
}

.App {
  height: 100vh;
  width: 100vw;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.HeaderContent {
  height: 10%;
}

.BodyContent {
  height: 100%;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}

.Header-Button button,
.Menu-Button,
.PlayTitleContainer,
.PlayRestartButtonContainer {
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.PlayContent {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.PlayTitleContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 20px;
}

.LabelContent {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.PlaySubmitButton {
  height: 50px;
  width: 100%;
  margin-top: 5px;
}

.CurrentHangul {
  font-size: 100px;
  margin-top: 5px;
  margin-bottom: 5px;
}

.PlayFeedbackContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 24px;
}

.PlayFeedbackContainer img {
  object-fit: contain;
  width: 24px;
}

.PlayContainer {
  width: 177px;
  max-width: 177px;
}

.PlayRestartButtonContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 60%;
}

.PlayRestartButtonContainer button {
  height: 100%;
  width: 100%;
}

